<resources>
    <string name="app_name">Rick and Morty Api</string>
    <string name="createdTxt">TEXTVIEW</string>
    <string name="locationTxt">TEXTVIEW</string>
    <string name="originTxt">TEXTVIEW</string>
    <string name="genderTxt">TEXTVIEW</string>
    <string name="speciesTxt">TEXTVIEW</string>
    <string name="nameTxt">TEXTVIEW</string>
    <string name="network_connection">PlEASE CHECK NETWORK CONNECTION</string>
    <string name="ok">Ok</string>
    <string name="character_name">Type a character name</string>
</resources>