<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    tools:context=".CharacterDetailsActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <ImageView
            android:id="@+id/userAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/nameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/nameTxt"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/userAvatar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/speciesTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/speciesTxt"
            app:layout_constraintStart_toStartOf="@+id/nameTxt"
            app:layout_constraintTop_toBottomOf="@+id/nameTxt" />

        <TextView
            android:id="@+id/genderTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/genderTxt"
            app:layout_constraintStart_toStartOf="@+id/speciesTxt"
            app:layout_constraintTop_toBottomOf="@+id/speciesTxt" />

        <TextView
            android:id="@+id/originTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/originTxt"
            app:layout_constraintStart_toStartOf="@+id/genderTxt"
            app:layout_constraintTop_toBottomOf="@+id/genderTxt" />

        <TextView
            android:id="@+id/locationTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/locationTxt"
            app:layout_constraintStart_toStartOf="@+id/originTxt"
            app:layout_constraintTop_toBottomOf="@+id/originTxt" />


        <TextView
            android:id="@+id/createdTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/createdTxt"
            app:layout_constraintStart_toStartOf="@+id/locationTxt"
            app:layout_constraintTop_toBottomOf="@+id/locationTxt" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>